Created api to fetch station by id
