# server/api/controllers/auth/routes.js
@@ -5,6 +5,5 @@ import controller from './controller';
 export default express
   .Router()
   .get('/getUserDetails', authHandler, controller.getUserDetails)
-  .get('/getStationDetails', authHandler, controller.getStationDetails)
   .post('/signupUser', authHandler, controller.signupUser)
   .post('/signupStation', authHandler, controller.signupStation);
