# server/api/controllers/station/controller.js
@@ -7,7 +7,18 @@ export class Controller {
         req.params.state,
         req.params.city
       );
-      res.status(200).json(stations);
+      res.status(200).json({ stations: stations });
+    } catch (error) {
+      next(error);
+    }
+  }
+
+  async getStationDetails(req, res, next) {
+    try {
+      const station = await StationService.getStationDetails(
+        req.params.stationId
+      );
+      res.status(200).json(station);
     } catch (error) {
       next(error);
     }
