# server/models/station.js
@@ -1,25 +1,0 @@
-class Station {
-  constructor(
-    uid,
-    name,
-    phone,
-    address,
-    email,
-    password,
-    state,
-    city,
-    location
-  ) {
-    this.uid = uid;
-    this.name = name;
-    this.phone = phone;
-    this.address = address;
-    this.email = email;
-    this.password = password;
-    this.state = state;
-    this.city = city;
-    this.location = location;
-  }
-}
-
-export default Station;
