# server/models/user.js
@@ -1,13 +1,0 @@
-class User {
-  constructor(uid, name, phone, email, password, state, city) {
-    this.uid = uid;
-    this.name = name;
-    this.phone = phone;
-    this.email = email;
-    this.password = password;
-    this.state = state;
-    this.city = city;
-  }
-}
-
-export default User;
